<resources>
    <string name="topic_app_name">话题</string>
    <string name="topic_zhi_shi_mo">知识魔</string>
    <string name="topic_hint_1">发布话题50条以上</string>
    <string name="topic_top_user_hint">他们都是优秀的学者</string>
    <string name="topic_tag_selected_colon">已选标签:</string>
    <string name="topic_newest">最新</string>
    <string name="topic_hottest">最热</string>
    <string name="topic_no_interest">无人问津</string>
    <string name="topic_report">举报</string>
    <string name="topic_today">今天</string>
    <string name="topic_age">岁</string>
    <string name="topic_year">年</string>
    <string name="topic_month">月</string>
    <string name="topic_day">日</string>
    <string name="topic_your_comment">你的看法</string>
    <string name="topic_your_comment_hint">热爱分享的你，展露你丰富的知识吧</string>
    <string name="topic_comment_count_format">%1$d条评论</string>
    <string name="topic_comment_sort_hot">按热度</string>
    <string name="topic_comment_sort_time">按时间</string>
    <string name="topic_total_reply_count_format">共%1$d条回复</string>
    <string name="topic_release_topic">发布话题</string>
    <string name="topic_release">发布</string>
    <string name="topic_topic_title">话题名称</string>
    <string name="topic_topic_title_hint">最多输入30个字...</string>
    <string name="topic_topic_cover">话题封面</string>
    <string name="topic_tag">标签</string>
    <string name="topic_music">音乐</string>
    <string name="topic_content">内容</string>
    <string name="topic_title_length_format">%1$d/30</string>
    <string name="topic_topic_cover_hint">照片/视频</string>
    <string name="topic_selected">选定</string>
    <string name="topic_template_select">模版选择</string>
    <string name="topic_template_select_hint">往往，人和人之间需要与众不同</string>
    <string name="topic_template_default">默认</string>
    <string name="topic_template_default_white">白色默认背景</string>
    <string name="topic_dialog_shopping_title_1">查看该话题需支付</string>
    <string name="topic_diamond">宝石</string>
    <string name="topic_balance_format">您当前余额为%1$d宝石</string>
    <string name="topic_dialog_shopping_cancel">再逛逛</string>
    <string name="topic_dialog_shopping_ok">去支付</string>
    <string name="topic_dialog_shopping_charge">去充值</string>
    <string name="topic_et_al">等人</string>
    <string name="topic_comment_edit_hint">说说你的看法吧</string>
    <string name="topic_send">发送</string>
    <string name="topic_reply">回复</string>
    <string name="topic_reply_comment">回复评论</string>
    <string name="topic_top_user_comment_count_format">参与%1$d话题</string>
    <string name="topic_support_format">赞同 %1$d</string>
    <string name="topic_supported_format">已赞同 %1$d</string>
    <string name="topic_comment_format">评论 %1$d</string>
    <string name="topic_share_format">转发 %1$d</string>
    <string name="topic_cancel">取消</string>
    <string name="topic_set_price_title">该条话题需要付费查看</string>
    <string name="topic_reset">重置</string>
    <string name="topic_confirm">确定</string>
</resources>
