<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topic_linearlayout4"
    android:layout_width="288dp"
    android:layout_height="wrap_content"
    android:background="@drawable/topic_shape_rect_corner_solid_white"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/topic_set_price_title"
        android:textColor="#ff434343"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/topic_view2"
        android:layout_width="125dp"
        android:layout_height="1dp"
        android:background="#ffe5e5e5"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/topic_edittext" />

    <EditText
        android:id="@+id/topic_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="70dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/common_text_blank"
        android:textSize="24sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textStyle="bold"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="555" />

    <TextView
        android:id="@+id/topic_textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/topic_diamond"
        android:textColor="#ff434343"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/topic_edittext"
        app:layout_constraintEnd_toEndOf="@+id/topic_view2"
        app:layout_constraintTop_toTopOf="@+id/topic_edittext" />

    <TextView
        android:id="@+id/topic_textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/topic_reset"
        android:textColor="@color/common_blue_deep"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/topic_view2"
        app:layout_constraintStart_toStartOf="@+id/topic_view2"
        app:layout_constraintTop_toBottomOf="@+id/topic_view2" />


    <TextView
        android:id="@+id/cancel_text_view"
        android:layout_width="68dp"
        android:layout_height="27dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/topic_shape_rect_corner_solid_divider"
        android:gravity="center"
        android:text="@string/topic_cancel"
        android:textColor="#ffffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_textview4" />


    <TextView
        android:layout_width="68dp"
        android:layout_height="27dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/topic_shape_rect_gradient_blue_corner"
        android:gravity="center"
        android:text="@string/topic_confirm"
        android:textColor="#ffffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_textview4" />

</android.support.constraint.ConstraintLayout>