<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.frame.component.view.SocialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbar_left_icon="@drawable/common_ic_close"
        app:toolbar_right_text="@string/topic_selected">

    </com.frame.component.view.SocialToolbar>

    <TextView
        android:id="@+id/topic_textview10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/topic_template_select"
        android:textColor="@color/common_text_blank"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/topic_textview13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/topic_template_select_hint"
        android:textColor="@color/common_text_blank"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/topic_textview10"
        app:layout_constraintTop_toBottomOf="@+id/topic_textview10" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="368dp"
        android:layout_height="434dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_textview13" />

</android.support.constraint.ConstraintLayout>