<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="14dp"
    android:paddingRight="14dp">

    <ImageView
        android:id="@+id/topic_imageview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/topic_textview7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topic_textview7"
        app:srcCompat="@drawable/topic_ic_star" />

    <TextView
        android:id="@+id/topic_textview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/topic_topic_title"
        android:textColor="@color/common_text_dark"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/topic_imageview4"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/topic_framelayout2"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/topic_shape_rect_corner_solid_bk_light"
        android:padding="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_textview7">

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:hint="@string/topic_topic_title_hint"
            android:maxLength="30"
            android:inputType="textMultiLine"
            android:textColor="@color/common_text_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/title_count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:textColor="@color/common_text_dark"
            android:textSize="12sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/topic_textview8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/topic_topic_cover"
        android:textColor="@color/common_text_dark"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="@+id/topic_textview7"
        app:layout_constraintTop_toBottomOf="@+id/topic_framelayout2" />

    <FrameLayout
        android:id="@+id/topic_framelayout3"
        android:layout_width="158dp"
        android:layout_height="108dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/topic_shape_rect_corner_solid_bk_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_textview8">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        </LinearLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/topic_imageview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/topic_textview9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topic_textview9"
        app:srcCompat="@drawable/topic_ic_star" />

    <TextView
        android:id="@+id/topic_textview9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/topic_tag"
        android:textColor="@color/common_text_dark"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/topic_imageview5"
        app:layout_constraintTop_toBottomOf="@+id/topic_framelayout3" />

    <TextView
        android:id="@+id/topic_view2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/common_text_blank"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:background="@drawable/topic_shape_rect_corner_solid_bk_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_textview9" />

    <ImageView
        android:id="@+id/topic_imageview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/topic_textview11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topic_textview11"
        app:srcCompat="@drawable/topic_ic_star" />

    <TextView
        android:id="@+id/topic_textview11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/topic_music"
        android:textColor="@color/common_text_dark"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/topic_imageview6"
        app:layout_constraintTop_toBottomOf="@+id/topic_view2" />

    <LinearLayout
        android:id="@+id/topic_linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_textview11">

    </LinearLayout>

    <ImageView
        android:id="@+id/topic_imageview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/topic_textview12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topic_textview12"
        app:srcCompat="@drawable/topic_ic_star" />

    <TextView
        android:id="@+id/topic_textview12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/topic_content"
        android:textColor="@color/common_text_dark"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/topic_imageview7"
        app:layout_constraintTop_toBottomOf="@+id/topic_linearlayout3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/topic_shape_rect_corner_solid_bk_light"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_textview12">

    </LinearLayout>

</android.support.constraint.ConstraintLayout>